--- a/FillTheGap.html
+++ b/FillTheGap.html
@@ -20,7 +20,9 @@
                             <input type="text" class="username" name="username" placeholder="Username" />
                             <input type="password" class="password" name="password" placeholder="Password" />
                             <input type="submit" value="Sign In" class="button" alt=""/>
-                            <p>New to FTG?</p>
+                            <p>Remember me
+                            <input type="checkbox" /></p>
+                            <p>Or</p>
                             <input type="submit" value="Create your account" class="registration" formaction="Chreg.html"/>
                         </form>
                         </div>
