--- a/FillTheGap.html
+++ b/FillTheGap.html
@@ -21,7 +21,7 @@
                             <input type="password" class="password" name="password" placeholder="Password" />
                             <input type="submit" value="Sign In" class="button" alt=""/>
                             <p>Remember me
-                            <input type="checkbox" /></p>
+                            <input type="checkbox" name="remember" /></p>
                             <p>Or</p>
                             <input type="submit" value="Create your account" class="registration" formaction="Chreg.html"/>
                         </form>
